--- a/assets/SCSS/components/_footer.scss
+++ b/assets/SCSS/components/_footer.scss
@@ -9,15 +9,24 @@
     }
 
     .copy{
+
+        strong{
+            text-decoration: none;
+            font-family: new-order, sans-serif;
+            font-weight: 700;
+            font-style: normal;
+            text-transform: uppercase;
+        }
+
         span, strong{
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
             .footer-copy{
                 margin-left: var(--space-sm);
             }
 
             small{
                 font-size: var(--sm);
-                font-family: var(--font-roboto);
+                font-family: var(--font-name);
             }
         }
         text-align: right;
