--- a/assets/SCSS/layout/_breakpoint_1024.scss
+++ b/assets/SCSS/layout/_breakpoint_1024.scss
@@ -78,7 +78,7 @@
                     &-pt, &-en{
                         .question-unique{
                             .question, .answer{
-                                font-family: var(--font-bebas);
+                                font-family: var(--font-name);
                                 font-size: var(--md);
                             }
 
