--- a/assets/SCSS/layout/_form.scss
+++ b/assets/SCSS/layout/_form.scss
@@ -10,7 +10,7 @@
         background: white;
         span{
             font-size: var(--sm);
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
             text-transform: uppercase;
             font-weight: bold;
         }
