--- a/assets/SCSS/shared/_variables.scss
+++ b/assets/SCSS/shared/_variables.scss
@@ -1,14 +1,15 @@
 :root{
     --sixth-color:  #06e757;
-    --fifth-color: #4e00ff;
+    --fifth-color: #0F53FA;
     --fourth-color:  #f06135;
     --third-color:   #ff2e40;
     --danger-color:  #fffb00;
     --second-color:  #e8e8e8;
     --primary-color: #2a2b2f;
-    --font-bebas: 'Bebas Neue', cursive;
-    --font-ubuntu: 'Ubuntu Condensed', sans-serif;
-    --font-roboto: 'Roboto', sans-serif;
+    --font-name: 'Poppins', sans-serif;
+    --text-color: rgba(29, 41, 63, 1);
+    --subtext-color: rgba(124, 128, 135, 1);
+
 
     //DEVICES CONTROLLER
     --bg-color: white;
