--- a/assets/SCSS/components/_case.scss
+++ b/assets/SCSS/components/_case.scss
@@ -1,24 +1,23 @@
 .case-controller{
-    padding: var(--padding-container-md);
     text-align: center;
     
     .title{
         span{
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
+            color: var(--text-color);
             font-size: calc(var(--lg) * 1.5);
-            font-weight: bold;
+            font-weight: 500;
         }
     }
     
     .subtitle{
         span{
-            font-family: var(--font-roboto);
-            padding-top: var(--space-md);
-            font-size: var(--md);
-            font-weight: normal;
-            width: 70%;
+            color: var(--subtext-color);
+            font-size: var(--sm);
+            font-weight: 500;
         }
     }
+
 
     .case-list{
         display: flex;
