--- a/assets/SCSS/components/_future.scss
+++ b/assets/SCSS/components/_future.scss
@@ -1,23 +1,43 @@
 .future-controller{
+    height: 100vh;
     padding: var(--padding-container); 
+    margin-top: calc(var(--space-lg) * 2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     .future-message{
         padding: 0 0 var(--space-lg) 0;
         .title{
             font-size: calc(var(--lg) * 1.5);
-            font-weight: bold;
+            font-weight: 500;
+            color: var(--text-color);
         }
         .subtitle{
             padding-top: var(--space-md);
-            font-size: var(--md);
-            font-weight: normal;
+            color: var(--subtext-color);
+            font-size: var(--sm);
+            font-weight: 500;
             width: 70%;
         }
     }
-
-    .code{
-        img{
-            filter: drop-shadow(10px 5px 5px rgba(0, 0, 0, 0.15));
+    
+    .column{
+        position: relative;
+        .bubble{
+            position: absolute;
+            left: 0;
+            width: 412px;
+            height: 412px;
+        }
+        .code{
+            img{
+                position: relative;
+                z-index: 2;
+                filter: drop-shadow(10px 5px 5px rgba(0, 0, 0, 0.15));
+            }
         }
     }
+
 }
