--- a/assets/SCSS/components/_hosplan.scss
+++ b/assets/SCSS/components/_hosplan.scss
@@ -4,7 +4,7 @@
 
     .title{
         span{
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
             font-size: calc(var(--lg) * 1.5);
             font-weight: bold;
         }
@@ -12,7 +12,7 @@
 
     .subtitle{
         span{
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
             font-size: var(--md);
         }
     }
