--- a/assets/SCSS/components/_leads.scss
+++ b/assets/SCSS/components/_leads.scss
@@ -1,6 +1,14 @@
 .leads-controller{
     padding: calc(var(--space-lg) * 4);
 
+    &.leads{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
     &.modal{
 
         &.active{
@@ -102,16 +110,18 @@
 
         .title{
             span{
-                font-family: var(--font-roboto);
+                font-family: var(--font-name);
+                color: var(--text-color);
                 font-size: calc(var(--lg) * 1.5);
-                font-weight: bold;
+                font-weight: 500;
             }
         }
-    
+        
         .subtitle{
             span{
-                font-family: var(--font-roboto);
-                font-size: var(--md);
+                color: var(--subtext-color);
+                font-size: var(--sm);
+                font-weight: 500;
             }
         }
 
@@ -125,7 +135,7 @@
                 border: 1px solid rgba(0, 0, 0, .15);
                 font-size: var(--md);
                 border-radius: var(--bordern);
-                font-family: var(--font-roboto);
+                font-family: var(--font-name);
                 margin: var(--sm) 0;
                 padding: var(--space-md);
 
