--- a/assets/SCSS/components/_work.scss
+++ b/assets/SCSS/components/_work.scss
@@ -1,11 +1,15 @@
 .work-controller{
-    padding: var(--padding-container-sm); 
+    //padding: var(--padding-container-sm); 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     .work-title{
         .title{
             color: var(--primary-color);
             font-size: calc(var(--lg) * 1.5);
-            font-family: var(--font-roboto);
+            font-family: var(--font-name);
             font-weight: 500;
             padding: var(--space-lg) 0;
             text-align: center;
@@ -16,37 +20,65 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
+        padding: 0 0 var(--space-lg) 0;
+
         .work-loop{
-            max-width: 300px;
-            max-height: 300px;
             display: flex;
 
             &.empty-pt, &.empty-en{
                 margin: 15px;
+                width: 330px;
+                height: 158px;
+                overflow: hidden;
+                padding: var(--space-md);
+                background: #F7F8FA;
+                border-radius: 10px;
+
+                &:hover{
+                    transition: var(--fast);
+                    min-height: 158px;
+                    background: var(--fifth-color);
+                    box-shadow: 0px 32px 54px rgb(37 138 255 / 22%);
+                    height: auto;
+                    overflow: visible;
+                    
+                    .title, .subtitle{
+                        color: white;
+                    }
+                    .subtitle{
+                        display: none;
+                        &.hide{
+                            display: block;
+                        }
+                    }
+                    i{
+                        color: var(--text-color);
+                        transition: var(--fast);
+                        transform: scale(1.1);
+                    }
+                }
             }
 
             .work{
                 //padding: var(--space-lg);
-                width: 300px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
 
                 i{
-                    color:var(--third-color);
+                    color:var(--fifth-color);
                 }
 
                 .title{
                     margin: var(--sm) 0 0 0;
-                    font-family: var(--font-roboto);
+                    font-family: var(--font-name);
                 }
 
                 .description{
                     text-align: center;
                     font-size: calc(var(--sm) * 1.25);
-                    font-family: var(--font-roboto);
+                    font-family: var(--font-name);
                     margin: var(--sm) 0;
                 }
             }
@@ -57,55 +89,47 @@
         display:block;
         width:100%;
         height:100%;
-        padding: var(--space-lg);
+        //padding: var(--space-lg);
         cursor:pointer;
 
-        &:hover > .card {
-            //background:var(--primary-color);
-            transform: rotateY(180deg);
-        }
-
         .card {
-            width: 300px;
-            height: 200px;
-            transform-style: preserve-3d;
-            transition: transform 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            border-radius: 6px;
-            box-shadow: 0 6px 16px rgba(0,0,0,0.15);
-            pointer-events:none;
+            display: flex;
             cursor: pointer;
-    
-            div {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                -webkit-backface-visibility: hidden;
-                backface-visibility: hidden;
-                border-radius: 6px;
-                background: white;
-                display: -ms-flexbox;
+
+            i{
+                max-width: 55px;
+                height: 55px;
                 display: flex;
-                -o-box-pack: center;
-                justify-content: center;
-                -o-box-align: center;
                 align-items: center;
-                font-family: var(--font-roboto);
-                -webkit-font-smoothing: antialiased;
-                color: var(--primary-color);
-                padding: var(--space-md);
-                border: 1px solid rgba(0,0,0,0.15);
+                justify-content: center;
+                border-radius: 100%;
+                flex: 1;
+                background: white;
+                margin: 0 var(--space-md) 0 0;
+
+                svg{
+                    width: 20px !important;
+                    height: 20px !important;
+                }
             }
 
-            .front{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
+            .info{
+                flex: 1;
+                .title{
+                    color: var(--text-color);
+                    font-size: calc(var(--md) / 1.15);
+                    font-weight: 700;
+                }
+                .subtitle{
+                    font-size: calc(var(--md) / 1.5);
+                    color:var(--subtext-color);
+                    &.hide{
+                        display: none;
+                    }
+                }
             }
-    
-            .back {
-                transform: rotateY(180deg);
-            }
+
+
         }
     }
       
