--- a/assets/SCSS/shared/_buttons.scss
+++ b/assets/SCSS/shared/_buttons.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     border-radius: var(--borders);
-    max-width: 210px;
+    //max-width: 210px;
 
     svg{
         max-height: 60px;
@@ -17,6 +17,9 @@
     &.default{
         color:var(--primary-color);
         padding: var(--space-sm) var(--space-md);
+        span{
+            color:var(--primary-color);
+        }
     }
 
     &.outline{
@@ -29,6 +32,9 @@
                 background: var(--fifth-color);
                 border-color: var(--fifth-color);
                 color:white;
+                span{
+                    color:white;
+                }
             }    
         }
 
@@ -37,23 +43,33 @@
             background: var(--primary-color);
             border-color: var(--primary-color);
             color:white;
+            span{
+                color:white;
+            }
         }
 
         &.lead{
 
             &.active{
                 transition: var(--fast);
-                background: var(--success);
-                border-color: var(--success);
-                color:var(--primary-color);
+                background: var(--fifth-color);
+                border-color: var(--fifth-color);
+                color: white;
+
+                span{
+                    color: white;
+                }
 
                 padding: var(--sm) calc(var(--lg) * 2);
 
                 &:hover{
                     transition: var(--fast);
-                    background: var(--primary-color);
-                    border-color: var(--primary-color);
+                    background: var(--text-color);
+                    border-color: var(--text-color);
                     color:var(--success);
+                    span{
+                        color:var(--success);
+                    }
                 }
             }
 
@@ -62,6 +78,9 @@
                 background: var(--success);
                 border-color: var(--success);
                 color:var(--primary-color);
+                span{
+                    color:var(--primary-color);
+                }
             }
         }
     }
