--- a/assets/SCSS/shared/_texts.scss
+++ b/assets/SCSS/shared/_texts.scss
@@ -1,5 +1,22 @@
 .short-title, .title, .subtitle {
-    font-family: var(--font-roboto);
+    font-family: var(--font-name);
+}
+
+.title{
+    span{
+        font-family: var(--font-name);
+        color: var(--text-color);
+        font-size: calc(var(--lg) * 1.5);
+        font-weight: 500;
+    }
+}
+
+.subtitle{
+    span{
+        color: var(--subtext-color);
+        font-size: var(--sm);
+        font-weight: 500;
+    }
 }
 
 .dev{
@@ -32,4 +49,7 @@
         }
     }
 }
+
+
+
 
