--- a/assets/SCSS/components/_work.scss
+++ b/assets/SCSS/components/_work.scss
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: center;
         padding: 0 0 var(--space-lg) 0;
+        flex-wrap: wrap;
 
         .work-loop{
             display: flex;
