--- a/assets/SCSS/layout/_breakpoint_768.scss
+++ b/assets/SCSS/layout/_breakpoint_768.scss
@@ -6,20 +6,30 @@
 }
 
 .nav-controller {
+
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     .nav-content {
 
+        padding: 0;
+        width: 100%;
+
         .logo{
-            max-width: 35px;
+            margin: 0 var(--space-md);
         }
 
         .menu-burger{
             display: flex;
             max-width: 15px;
+            margin-right: var(--space-md);
             transition: var(--fast);
 
             &.active{
                 transition: var(--fast);
-                color:var(--third-color);
+                color:var(--fifth-color);
             }
 
             svg{
@@ -40,8 +50,8 @@
             z-index: 3;
             background: white;
             left: 0;
-            top: 70px;
-            height: calc(100vh - 70px);
+            top: 65px;
+            height: calc(100vh - 65px);
             width: 50vw;
             display: flex;
             padding: calc(var(--space-lg) * 2 ) var(--space-lg);
@@ -68,6 +78,10 @@
                 }
             }
         }
+
+        .action{
+            padding: 0;
+        }
     }
 }
 
@@ -93,6 +107,7 @@
         position: relative;
         z-index: 1;
         margin: calc(var(--space-sm) * 4);
+        padding: var(--space-lg);
         .title{
             font-size: var(--md);
             font-weight: bold;
@@ -126,7 +141,7 @@
         .work-loop{
             &.empty{
                 &-pt, &-en{
-                    margin: 0 15px;
+                    margin: var(--space-md);
                 }
             }
         }
@@ -140,6 +155,14 @@
 }
 
 .future-controller {
+
+    justify-content: end;
+    text-align: center;
+
+    .btn{
+        margin: 0 auto;
+    }
+
     .future-message {
         .title {
             font-size: var(--lg);
@@ -454,5 +477,11 @@
         &:after{
             height: 70%;
         }
+    }
+}
+
+.story-section{
+    .title{
+        text-align: center;
     }
 }
