--- a/assets/SCSS/layout/_lgpd.scss
+++ b/assets/SCSS/layout/_lgpd.scss
@@ -103,6 +103,13 @@
     &.active{
         display: flex;
         flex-direction: column;
+        &.lgpd-page{
+            .privacy-policy{
+                width: 80vw;
+                max-height: 80vh;
+                border-radius: var(--borders);
+            }
+        }
     }
 
     .privacy-policy {
