--- a/assets/SCSS/shared/_variables.scss
+++ b/assets/SCSS/shared/_variables.scss
@@ -1,11 +1,8 @@
 :root{
-    --sixth-color:  rgb(6, 231, 87);
-    --sixth-rgba: 6, 231, 87;
-    --fifth-color: rgb(15, 83, 250);
-    --fifth-rgba: 15, 83, 250;
+    --sixth-color:  #06e757;
+    --fifth-color: #0F53FA;
     --fourth-color:  #f06135;
-    --third-color:   rgb(255, 46, 64);
-    --third-rgba: 255, 46, 64;
+    --third-color:   #ff2e40;
     --danger-color:  #fffb00;
     --second-color:  #e8e8e8;
     --primary-color: #2a2b2f;
