--- a/assets/SCSS/components/_login.scss
+++ b/assets/SCSS/components/_login.scss
@@ -1,4 +1,4 @@
-.login-form, .makepay-controller, .payment-controller{
+.login-form, .payment-controller{
     height: 80vh;
     width: 100vw;
     display: flex;
@@ -11,10 +11,13 @@
         padding: var(--space-md);
         background: var(--primary-color);
         .field-container{
+            margin-bottom: var(--space-sm);
+            display: flex;
+            align-items: center;
+
             input{
                 background: white;
                 padding: var(--space-sm);
-                margin-bottom: var(--space-sm);
             }
 
             button{
@@ -22,12 +25,90 @@
                 background: var(--sixth-color);
                 color: var(--primary-color);
                 width: 100%;
+                max-height: 36px;
+            }
+        }
+    }
+
+    
+    a{
+        svg{
+            fill: #1D293F;
+            &.loader{
+                animation: squad 5.5s infinite;
             }
         }
     }
 }
 
-.makepay-controller, .payment-controller{
+@keyframes squad{
+    0%{
+        transform: rotate(15deg);
+        fill: #1D293F;
+    }
+    10%{
+        transform: rotate(-15deg);
+        fill: transparent;
+        stroke-dashoffset: 5381.1px;
+        stroke-dasharray: 5381.1px;
+    }
+    20%{
+        transform: rotate(15deg);
+        fill: transparent;
+        stroke-dashoffset: 6881.1px;
+        stroke-dasharray: 6881.1px;
+    }
+    30%{
+        transform: rotate(10deg);
+        fill: transparent;
+        stroke-dashoffset: 7381.1px;
+        stroke-dasharray: 7381.1px;
+    }
+    40%{
+        transform: rotate(15deg);
+        fill: transparent;
+        stroke-dashoffset: 8381.1px;
+        stroke-dasharray: 8381.1px;
+    }
+    50%{
+        transform: rotate(5deg);
+        fill: transparent;
+        stroke-dashoffset: 15381.1px;
+        stroke-dasharray: 15381.1px;
+    }
+    60%{
+        transform: rotate(10deg);
+        fill: transparent;
+        stroke-dashoffset: 50381.1px;
+        stroke-dasharray: 50381.1px;
+    }
+    70%{
+        transform: rotate(0deg);
+        fill: transparent;
+        stroke-dashoffset: 9000px;
+        stroke-dasharray: 9000px;
+    }
+    80%{
+        transform: rotate(0deg);
+        fill: transparent;
+        stroke-dashoffset: 3000px;
+        stroke-dasharray: 3000px;
+    }
+    90%{
+        transform: rotate(0deg);
+        fill: rgba(29, 41, 63, .1);
+        stroke-dashoffset: 0;
+        stroke-dasharray: 5000px;
+    }
+    100%{
+        transform: rotate(0deg);
+        fill: rgba(29, 41, 63, 1);
+        stroke-dashoffset: 0;
+        stroke-dasharray: 3000px;
+    }
+}
+
+.payment-controller{
     flex-direction: column;
     h1{
         font-size: 150%;
@@ -84,34 +165,7 @@
     }
 }
 
-.makepay-controller{
-    form{
-        &.makepay{
-            .field-container{
-                label{
-                    height: 46px;
-                    width: 10px;
-                    position: absolute;
-                    color:white;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    background: rgba(255, 255, 255, .07);
-                    svg{
-                        height: 15px;
-                        width: 15px;
-                    }
-                }
-    
-                input{
-                    padding-left: 16px;
-                }
-            }
-        }
-    }
-}
-
-.login-form, .makepay-controller{
+.login-form{
     flex-direction: column;
 
     form{
